--- a/style.css
+++ b/style.css
@@ -11,31 +11,112 @@
   width: 100%;
   height: max-content;
 }
-.body-container{
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
-    flex: 1 1 50%;
-    justify-content: space-around;
+.body-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  flex: 1 1 50%;
+  justify-content: space-around;
 }
-.left,.right{
-    width: 50%;
-    height: 100vh;
+.left,
+.right {
+  width: 50%;
+  height: 100vh;
 }
-.space{
-    margin-left: 19rem;
+.space {
+  margin-left: 19rem;
+}
+.logo-txt {
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 1.7rem;
+  font-weight: 500;
+}
+.logo {
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: #0866ff;
+  margin-top: 12rem;
+}
+/* right */
+.right,
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+form {
+  width: 25rem;
+  height: 19rem;
+  background-color: white;
+  /* box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3); */
+  margin-left: -15rem;
+  margin-top: -5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  border-radius: 10px;
+  padding: 1rem 0.5rem;
+}
+.sign-up-txt {
+  margin-left: -15rem;
+  padding-top: 3rem;
+  font-size: 0.9rem;
+}
+.create-acc {
+  font-weight: 600;
+  color: #1c1e21;
+}
+
+input {
+  background-color: white;
+  border: 1px solid #dddfe2;
+  width: 90%;
+}
+
+input,
+button {
+  border-radius: 5px;
+  height: 2.5rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+}
+.log-in-btn {
+  background-color: #0866ff;
+  color: white;
+  width: 95%;
+}
+.create-btn {
+  background-color: #42b72a;
+  color: white;
+  width: 50%;
+}
+hr {
+  color: #dddfe2;
+  width: 100%;
+}
+input::placeholder {
+  padding-left: 0.8rem;
+  color: #90949c;
+}
+button {
+  border: none;
+  font-weight: 700;
+}
+.forgot-txt {
+  background-color: #fff;
+  color: #0866ff;
+  font-size: 0.9rem;
+}
+/* HOVERS */
+.forgot-txt:hover,.create-acc:hover{
+    text-decoration: underline;
+}
+input:focus {
+    border-color: #0866ff;
    
-}
-.logo-txt{
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 1.7rem;
-    font-weight: 500;
-}
-.logo{
-    font-size: 3.5rem;
-    font-weight: 700;
-    color:#0866ff;
-    margin-top: 12rem;
-}
+    outline: none; 
+  }
+  
