--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
   background-color: #f2f4f7;
   text-decoration: none;
   font-family: sans-serif;
+
+
 }
 .container {
   display: flex;
@@ -17,7 +19,8 @@
   display: flex;
   flex-direction: row;
   flex: 1 1 50%;
-  justify-content: space-around;
+  justify-content: space-around;  flex-wrap: wrap;
+
 }
 .left,
 .right {
@@ -46,6 +49,7 @@ form {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
 }
 form {
   width: 25rem;
@@ -116,7 +120,32 @@ button {
 }
 input:focus {
     border-color: #0866ff;
-   
     outline: none; 
   }
-  
+  /* footer */
+  footer{
+    width: 100%;
+    height: max-content;
+    background-color:white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+  }
+  .footer-container{
+    width: 70%;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    align-items:left ;
+    justify-content:center;
+    padding: 1rem;
+    background-color:white;
+    
+  }
+  .footer-container p{
+    color: grey;
+    background-color: white;
+    font-size: 0.8rem;
+    line-height: 1.5rem;
+  }
